# Church-Manager-v2

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: create_initial_migration.py  env.py
alembic/versions/: 20250809_014753_9bf4c1410aeb_initial_schema.py
app/clients/: waha_client.py
app/core/: database.py
app/models/: __init__.py  associations.py  base.py  ministry.py  schedule.py  user.py
app/repositories/: __init__.py  base.py  ministry.py  schedule.py  user.py
app/routers/: waha.py
app/schemas/: waha.py
docs/: api.md  architecture.md  database.md  development.md  langgraph-agents.md
tests/: test_waha_client.py
